--- a/styleguide/section-layout.html
+++ b/styleguide/section-layout.html
@@ -51,46 +51,58 @@
             </a>
           </li>
           <li class="kss-nav__item">
-            <a class="kss-state-active" href="section-layout.html">
+            <a class="" href="section-containers.html">
               <span class="kss-nav__ref">3</span>
+              <span class="kss-nav__name">Containers</span>
+            </a>
+          </li>
+          <li class="kss-nav__item">
+            <a class="kss-state-active" href="section-layout.html">
+              <span class="kss-nav__ref">4</span>
               <span class="kss-nav__name">Layout</span>
             </a>
                 <ul class="kss-nav__subnav">
                     <li class="kss-nav__item ">
                       <a href="section-layout.html#kssref-layout-1xw">
-                        <span class="kss-nav__ref">3.1</span>
+                        <span class="kss-nav__ref">4.1</span>
                         <span class="kss-nav__name">Container Flex/Inline</span>
                       </a>
                     </li>
                     <li class="kss-nav__item ">
                       <a href="section-layout.html#kssref-layout-2">
-                        <span class="kss-nav__ref">3.2</span>
+                        <span class="kss-nav__ref">4.2</span>
                         <span class="kss-nav__name">Column Box</span>
                       </a>
                     </li>
                     <li class="kss-nav__item ">
                       <a href="section-layout.html#kssref-layout-3">
-                        <span class="kss-nav__ref">3.3</span>
+                        <span class="kss-nav__ref">4.3</span>
                         <span class="kss-nav__name">Column Box Sintaxis</span>
                       </a>
                     </li>
                     <li class="kss-nav__item ">
                       <a href="section-layout.html#kssref-layout-4">
-                        <span class="kss-nav__ref">3.4</span>
+                        <span class="kss-nav__ref">4.4</span>
                         <span class="kss-nav__name">Column Box XL Sizes</span>
                       </a>
                     </li>
                     <li class="kss-nav__item ">
                       <a href="section-layout.html#kssref-layout-5">
-                        <span class="kss-nav__ref">3.5</span>
+                        <span class="kss-nav__ref">4.5</span>
                         <span class="kss-nav__name">Column Box M Sizes</span>
                       </a>
                     </li>
                 </ul>
           </li>
           <li class="kss-nav__item">
+            <a class="" href="section-paragraphs.html">
+              <span class="kss-nav__ref">5</span>
+              <span class="kss-nav__name">Paragraphs</span>
+            </a>
+          </li>
+          <li class="kss-nav__item">
             <a class="" href="section-specificity.html">
-              <span class="kss-nav__ref">4</span>
+              <span class="kss-nav__ref">6</span>
               <span class="kss-nav__name">Specificity</span>
             </a>
           </li>
@@ -110,11 +122,11 @@
             <header class="kss-section kss-section--depth-1" id="kssref-layout">
 
             <article class="kss-section__content">
-                <p class="kss-section__source">Source: <span>src/index.scss</span>, line <span>14</span></p>
+                <p class="kss-section__source">Source: <span>src/index.scss</span>, line <span>16</span></p>
 
               <a class="kss-section__permalink" href="#kssref-layout">
                 <h1 class="kss-section__item kss-section__item--depth-1">
-                  <span class="kss-section__ref">3</span>
+                  <span class="kss-section__ref">4</span>
                   <span class="kss-section__name">Layout</span>
                 </h1>
               </a>
@@ -133,7 +145,7 @@
 
               <a class="kss-section__permalink" href="#kssref-layout-1xw">
                 <h2 class="kss-section__item kss-section__item--depth-2">
-                  <span class="kss-section__ref">3.1</span>
+                  <span class="kss-section__ref">4.1</span>
                   <span class="kss-section__name">Container Flex/Inline</span>
                 </h2>
               </a>
@@ -157,7 +169,7 @@
 
               <a class="kss-section__permalink" href="#kssref-layout-2">
                 <h2 class="kss-section__item kss-section__item--depth-2">
-                  <span class="kss-section__ref">3.2</span>
+                  <span class="kss-section__ref">4.2</span>
                   <span class="kss-section__name">Column Box</span>
                 </h2>
               </a>
@@ -185,7 +197,7 @@
 
               <a class="kss-section__permalink" href="#kssref-layout-3">
                 <h2 class="kss-section__item kss-section__item--depth-2">
-                  <span class="kss-section__ref">3.3</span>
+                  <span class="kss-section__ref">4.3</span>
                   <span class="kss-section__name">Column Box Sintaxis</span>
                 </h2>
               </a>
@@ -214,7 +226,7 @@
 
               <a class="kss-section__permalink" href="#kssref-layout-4">
                 <h2 class="kss-section__item kss-section__item--depth-2">
-                  <span class="kss-section__ref">3.4</span>
+                  <span class="kss-section__ref">4.4</span>
                   <span class="kss-section__name">Column Box XL Sizes</span>
                 </h2>
               </a>
@@ -267,7 +279,7 @@
 
               <a class="kss-section__permalink" href="#kssref-layout-5">
                 <h2 class="kss-section__item kss-section__item--depth-2">
-                  <span class="kss-section__ref">3.5</span>
+                  <span class="kss-section__ref">4.5</span>
                   <span class="kss-section__name">Column Box M Sizes</span>
                 </h2>
               </a>
