--- a/styleguide/section-specificity.html
+++ b/styleguide/section-specificity.html
@@ -51,26 +51,38 @@
             </a>
           </li>
           <li class="kss-nav__item">
-            <a class="" href="section-layout.html">
+            <a class="" href="section-containers.html">
               <span class="kss-nav__ref">3</span>
+              <span class="kss-nav__name">Containers</span>
+            </a>
+          </li>
+          <li class="kss-nav__item">
+            <a class="" href="section-layout.html">
+              <span class="kss-nav__ref">4</span>
               <span class="kss-nav__name">Layout</span>
             </a>
           </li>
           <li class="kss-nav__item">
+            <a class="" href="section-paragraphs.html">
+              <span class="kss-nav__ref">5</span>
+              <span class="kss-nav__name">Paragraphs</span>
+            </a>
+          </li>
+          <li class="kss-nav__item">
             <a class="kss-state-active" href="section-specificity.html">
-              <span class="kss-nav__ref">4</span>
+              <span class="kss-nav__ref">6</span>
               <span class="kss-nav__name">Specificity</span>
             </a>
                 <ul class="kss-nav__subnav">
                     <li class="kss-nav__item ">
                       <a href="section-specificity.html#kssref-specificity-1">
-                        <span class="kss-nav__ref">4.1</span>
+                        <span class="kss-nav__ref">6.1</span>
                         <span class="kss-nav__name">Prefix</span>
                       </a>
                     </li>
                     <li class="kss-nav__item ">
                       <a href="section-specificity.html#kssref-specificity-2">
-                        <span class="kss-nav__ref">4.2</span>
+                        <span class="kss-nav__ref">6.2</span>
                         <span class="kss-nav__name">BEM</span>
                       </a>
                     </li>
@@ -92,11 +104,11 @@
             <header class="kss-section kss-section--depth-1" id="kssref-specificity">
 
             <article class="kss-section__content">
-                <p class="kss-section__source">Source: <span>src/index.scss</span>, line <span>7</span></p>
+                <p class="kss-section__source">Source: <span>src/index.scss</span>, line <span>9</span></p>
 
               <a class="kss-section__permalink" href="#kssref-specificity">
                 <h1 class="kss-section__item kss-section__item--depth-1">
-                  <span class="kss-section__ref">4</span>
+                  <span class="kss-section__ref">6</span>
                   <span class="kss-section__name">Specificity</span>
                 </h1>
               </a>
@@ -115,7 +127,7 @@
 
               <a class="kss-section__permalink" href="#kssref-specificity-1">
                 <h2 class="kss-section__item kss-section__item--depth-2">
-                  <span class="kss-section__ref">4.1</span>
+                  <span class="kss-section__ref">6.1</span>
                   <span class="kss-section__name">Prefix</span>
                 </h2>
               </a>
@@ -144,7 +156,7 @@
 
               <a class="kss-section__permalink" href="#kssref-specificity-2">
                 <h2 class="kss-section__item kss-section__item--depth-2">
-                  <span class="kss-section__ref">4.2</span>
+                  <span class="kss-section__ref">6.2</span>
                   <span class="kss-section__name">BEM</span>
                 </h2>
               </a>
