--- a/styleguide/item-specificity-2.html
+++ b/styleguide/item-specificity-2.html
@@ -51,14 +51,26 @@
             </a>
           </li>
           <li class="kss-nav__item">
-            <a class="" href="section-layout.html">
+            <a class="" href="section-containers.html">
               <span class="kss-nav__ref">3</span>
+              <span class="kss-nav__name">Containers</span>
+            </a>
+          </li>
+          <li class="kss-nav__item">
+            <a class="" href="section-layout.html">
+              <span class="kss-nav__ref">4</span>
               <span class="kss-nav__name">Layout</span>
             </a>
           </li>
           <li class="kss-nav__item">
+            <a class="" href="section-paragraphs.html">
+              <span class="kss-nav__ref">5</span>
+              <span class="kss-nav__name">Paragraphs</span>
+            </a>
+          </li>
+          <li class="kss-nav__item">
             <a class="" href="section-specificity.html">
-              <span class="kss-nav__ref">4</span>
+              <span class="kss-nav__ref">6</span>
               <span class="kss-nav__name">Specificity</span>
             </a>
           </li>
@@ -82,7 +94,7 @@
 
               <a class="kss-section__permalink" href="#kssref-specificity-2">
                 <h2 class="kss-section__item kss-section__item--depth-2">
-                  <span class="kss-section__ref">4.2</span>
+                  <span class="kss-section__ref">6.2</span>
                   <span class="kss-section__name">BEM</span>
                 </h2>
               </a>
