--- a/styleguide/section-brandlines.html
+++ b/styleguide/section-brandlines.html
@@ -65,14 +65,26 @@
             </a>
           </li>
           <li class="kss-nav__item">
-            <a class="" href="section-layout.html">
+            <a class="" href="section-containers.html">
               <span class="kss-nav__ref">3</span>
+              <span class="kss-nav__name">Containers</span>
+            </a>
+          </li>
+          <li class="kss-nav__item">
+            <a class="" href="section-layout.html">
+              <span class="kss-nav__ref">4</span>
               <span class="kss-nav__name">Layout</span>
             </a>
           </li>
           <li class="kss-nav__item">
+            <a class="" href="section-paragraphs.html">
+              <span class="kss-nav__ref">5</span>
+              <span class="kss-nav__name">Paragraphs</span>
+            </a>
+          </li>
+          <li class="kss-nav__item">
             <a class="" href="section-specificity.html">
-              <span class="kss-nav__ref">4</span>
+              <span class="kss-nav__ref">6</span>
               <span class="kss-nav__name">Specificity</span>
             </a>
           </li>
@@ -92,7 +104,7 @@
             <header class="kss-section kss-section--depth-1" id="kssref-brandlines">
 
             <article class="kss-section__content">
-                <p class="kss-section__source">Source: <span>src/index.scss</span>, line <span>29</span></p>
+                <p class="kss-section__source">Source: <span>src/index.scss</span>, line <span>31</span></p>
 
               <a class="kss-section__permalink" href="#kssref-brandlines">
                 <h1 class="kss-section__item kss-section__item--depth-1">
