--- a/styleguide/item-containers-6.html
+++ b/styleguide/item-containers-6.html
@@ -111,7 +111,7 @@
        <div class="x-fly-br">
          <div class="x-fly-br-cnt">
            <div class="x-img-ovl">
-             <img src="/kss-assets/img/banner-vtex.jpg" alt>
+             <img src="../kss-assets/img/banner-vtex.jpg" alt>
              <div class="x-img-ovl-layer">
                <div class="x-tx-lft x-pd-small">
                  <p> Blog/Ecommerce </p>
@@ -127,7 +127,7 @@
        <div class="x-fly-br">
          <div class="x-fly-br-cnt">
            <div class="x-img-ovl">
-             <img src="/kss-assets/img/banner-vtex.jpg" alt>
+             <img src="../kss-assets/img/banner-vtex.jpg" alt>
              <div class="x-img-ovl-layer">
                <div class="x-tx-lft x-pd-small">
                  <p> Blog/Ecommerce </p>
@@ -143,7 +143,7 @@
        <div class="x-fly-br">
          <div class="x-fly-br-cnt">
            <div class="x-img-ovl">
-             <img src="/kss-assets/img/banner-vtex.jpg" alt>
+             <img src="../kss-assets/img/banner-vtex.jpg" alt>
              <div class="x-img-ovl-layer">
                <div class="x-tx-lft x-pd-small">
                  <p> Blog/Ecommerce </p>
