--- a/styleguide/item-containers-3.html
+++ b/styleguide/item-containers-3.html
@@ -111,7 +111,7 @@
 
                 <div class="kss-modifiers__example"><div class="x-img-ovl">
    <!-- img simple element -->
-   <img src="/kss-assets/img/banner-vtex.jpg" alt>
+   <img src="../kss-assets/img/banner-vtex.jpg" alt>
    <!-- over element -->
    <div class="x-img-ovl-layer">
      <div>
@@ -128,7 +128,7 @@
                 <article class="kss-section__markup">
                   <pre><code class="language-markup">&lt;div class&#x3D;&quot;x-img-ovl&quot;&gt;
    &lt;!-- img simple element --&gt;
-   &lt;img src&#x3D;&quot;/kss-assets/img/banner-vtex.jpg&quot; alt&gt;
+   &lt;img src&#x3D;&quot;../kss-assets/img/banner-vtex.jpg&quot; alt&gt;
    &lt;!-- over element --&gt;
    &lt;div class&#x3D;&quot;x-img-ovl-layer&quot;&gt;
      &lt;div&gt;
