--- a/styleguide/item-containers-4.html
+++ b/styleguide/item-containers-4.html
@@ -116,7 +116,7 @@
      <div class="x-card-morph">
        <!-- Image Overlay  -->
        <div class="x-img-ovl">
-         <img src="/kss-assets/img/banner-vtex.jpg" alt>
+         <img src="../kss-assets/img/banner-vtex.jpg" alt>
          <div class="x-img-ovl-layer">
            <div>
              <h2 class="x-mg-small"> VTEX </h2>
@@ -143,7 +143,7 @@
      &lt;div class&#x3D;&quot;x-card-morph&quot;&gt;
        &lt;!-- Image Overlay  --&gt;
        &lt;div class&#x3D;&quot;x-img-ovl&quot;&gt;
-         &lt;img src&#x3D;&quot;/kss-assets/img/banner-vtex.jpg&quot; alt&gt;
+         &lt;img src&#x3D;&quot;../kss-assets/img/banner-vtex.jpg&quot; alt&gt;
          &lt;div class&#x3D;&quot;x-img-ovl-layer&quot;&gt;
            &lt;div&gt;
              &lt;h2 class&#x3D;&quot;x-mg-small&quot;&gt; VTEX &lt;/h2&gt;
