--- a/styleguide/section-containers.html
+++ b/styleguide/section-containers.html
@@ -260,7 +260,7 @@
 
                 <div class="kss-modifiers__example"><div class="x-img-ovl">
    <!-- img simple element -->
-   <img src="../kss-assets/img/banner-vtex.jpg" alt>
+   <img src="kss-assets/img/banner-vtex.jpg" alt>
    <!-- over element -->
    <div class="x-img-ovl-layer">
      <div>
@@ -277,7 +277,7 @@
                 <article class="kss-section__markup">
                   <pre><code class="language-markup">&lt;div class&#x3D;&quot;x-img-ovl&quot;&gt;
    &lt;!-- img simple element --&gt;
-   &lt;img src&#x3D;&quot;../kss-assets/img/banner-vtex.jpg&quot; alt&gt;
+   &lt;img src&#x3D;&quot;kss-assets/img/banner-vtex.jpg&quot; alt&gt;
    &lt;!-- over element --&gt;
    &lt;div class&#x3D;&quot;x-img-ovl-layer&quot;&gt;
      &lt;div&gt;
@@ -319,7 +319,7 @@
      <div class="x-card-morph">
        <!-- Image Overlay  -->
        <div class="x-img-ovl">
-         <img src="../kss-assets/img/banner-vtex.jpg" alt>
+         <img src="kss-assets/img/banner-vtex.jpg" alt>
          <div class="x-img-ovl-layer">
            <div>
              <h2 class="x-mg-small"> VTEX </h2>
@@ -346,7 +346,7 @@
      &lt;div class&#x3D;&quot;x-card-morph&quot;&gt;
        &lt;!-- Image Overlay  --&gt;
        &lt;div class&#x3D;&quot;x-img-ovl&quot;&gt;
-         &lt;img src&#x3D;&quot;../kss-assets/img/banner-vtex.jpg&quot; alt&gt;
+         &lt;img src&#x3D;&quot;kss-assets/img/banner-vtex.jpg&quot; alt&gt;
          &lt;div class&#x3D;&quot;x-img-ovl-layer&quot;&gt;
            &lt;div&gt;
              &lt;h2 class&#x3D;&quot;x-mg-small&quot;&gt; VTEX &lt;/h2&gt;
@@ -387,7 +387,7 @@
        <div class="x-fly-br-cnt">
          <!-- your content -->
          <div class="x-img-ovl">
-           <img src="../kss-assets/img/banner-vtex.jpg" alt>
+           <img src="kss-assets/img/banner-vtex.jpg" alt>
            <div class="x-img-ovl-layer">
              <div>
                <h2 class="x-mg-small"> VTEX </h2>
@@ -437,7 +437,7 @@
        <div class="x-fly-br">
          <div class="x-fly-br-cnt">
            <div class="x-img-ovl">
-             <img src="../kss-assets/img/banner-vtex.jpg" alt>
+             <img src="kss-assets/img/banner-vtex.jpg" alt>
              <div class="x-img-ovl-layer">
                <div class="x-tx-lft x-pd-small">
                  <p> Blog/Ecommerce </p>
@@ -453,7 +453,7 @@
        <div class="x-fly-br">
          <div class="x-fly-br-cnt">
            <div class="x-img-ovl">
-             <img src="../kss-assets/img/banner-vtex.jpg" alt>
+             <img src="kss-assets/img/banner-vtex.jpg" alt>
              <div class="x-img-ovl-layer">
                <div class="x-tx-lft x-pd-small">
                  <p> Blog/Ecommerce </p>
@@ -469,7 +469,7 @@
        <div class="x-fly-br">
          <div class="x-fly-br-cnt">
            <div class="x-img-ovl">
-             <img src="../kss-assets/img/banner-vtex.jpg" alt>
+             <img src="kss-assets/img/banner-vtex.jpg" alt>
              <div class="x-img-ovl-layer">
                <div class="x-tx-lft x-pd-small">
                  <p> Blog/Ecommerce </p>
