add containers, alternates for surf, photo container

--- a/styleguide/item-brandlines-2.html
+++ b/styleguide/item-brandlines-2.html
@@ -120,84 +120,84 @@
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #1E1E1E; black
-
-                    </p>
-                    <code class="kss-parameters__name">$black</code>
-                  </li>
-                  <li class="kss-parameters__item">
-                    <p class="kss-parameters__description">
-                      #48484A;  alt primary
+                      #48484A;  Primary Alternate
 
                     </p>
                     <code class="kss-parameters__name">$alt-primary</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #006262;  alt secondary
+                      #006262;  Secondary Alternate
 
                     </p>
                     <code class="kss-parameters__name">$alt-secondary</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #FFF; white
+                      #FFF; Absolute White
 
                     </p>
                     <code class="kss-parameters__name">$white</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #1460aa; primary blue
+                      #1E1E1E; Absolute Black
+
+                    </p>
+                    <code class="kss-parameters__name">$black</code>
+                  </li>
+                  <li class="kss-parameters__item">
+                    <p class="kss-parameters__description">
+                      #1460aa; Highlight Blue
 
                     </p>
                     <code class="kss-parameters__name">$highlight-blue</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #f7f9fa; gray color
+                      #f7f9fa; Soft Gray
 
                     </p>
                     <code class="kss-parameters__name">$gray</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #e3e4e6; grey border
+                      #e3e4e6; Dark Gray
 
                     </p>
-                    <code class="kss-parameters__name">$grey-border</code>
+                    <code class="kss-parameters__name">$grey-dark</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #F71963; vtex
+                      #F71963; VTEX
 
                     </p>
                     <code class="kss-parameters__name">$vtex</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #134cd8;  vtex
+                      #134cd8;  VTEX Second
 
                     </p>
                     <code class="kss-parameters__name">$vtexSecond</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #dbe9fd; vtex hover
+                      #dbe9fd; VTEX Hover Second
 
                     </p>
                     <code class="kss-parameters__name">$vtexSecondHover</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #ff4c4c; alert
+                      #ff4c4c; VTEX Alert
 
                     </p>
                     <code class="kss-parameters__name">$vtexAlert</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #97113d; magic
+                      #97113d; MagicStore
 
                     </p>
                     <code class="kss-parameters__name">$magic</code>
