--- a/styleguide/item-brandlines.html
+++ b/styleguide/item-brandlines.html
@@ -57,6 +57,12 @@
                         <span class="kss-nav__name">Highlight Colors</span>
                       </a>
                     </li>
+                    <li class="kss-nav__item ">
+                      <a href="section-brandlines.html#kssref-brandlines-3">
+                        <span class="kss-nav__ref">1.3</span>
+                        <span class="kss-nav__name">Gradiant Primary</span>
+                      </a>
+                    </li>
                 </ul>
           </li>
           <li class="kss-nav__item">
@@ -105,7 +111,7 @@
             <header class="kss-section kss-section--depth-1" id="kssref-brandlines">
 
             <article class="kss-section__content">
-                <p class="kss-section__source">Source: <span>src/index.scss</span>, line <span>31</span></p>
+                <p class="kss-section__source">Source: <span>src/index.scss</span>, line <span>28</span></p>
 
               <a class="kss-section__permalink" href="#kssref-brandlines">
                 <h1 class="kss-section__item kss-section__item--depth-1">
