--- a/styleguide/item-components-1.html
+++ b/styleguide/item-components-1.html
@@ -100,7 +100,8 @@
                 </h2>
               </a>
 
-                <div class="kss-section__description"><p>Button style &amp; normalize.</p>
+                <div class="kss-section__description"><p>Button styles can be applied to anything with the <code>.x-button</code> class applied.
+However, typically you'll want to apply these to only <code>&lt;a&gt;</code> and <code>&lt;button&gt;</code> elements for the best rendering.</p>
 </div>
 
             </article>
