--- a/styleguide/item-containers-3.html
+++ b/styleguide/item-containers-3.html
@@ -109,7 +109,7 @@
                 <h1 class="kss-modifiers__heading">Example</h1>
 
 
-                <div class="kss-modifiers__example"><div class="x-img-ovl">
+                <div class="kss-modifiers__example"><div class="x-img-ovl x-wd-50"> <!-- can add static size class x-hg-#r x-wd-#r -->
    <!-- img simple element -->
    <img src="kss-assets/img/banner-vtex.jpg" alt>
    <!-- over element -->
@@ -126,7 +126,7 @@
               </article>
 
                 <article class="kss-section__markup">
-                  <pre><code class="language-markup">&lt;div class&#x3D;&quot;x-img-ovl&quot;&gt;
+                  <pre><code class="language-markup">&lt;div class&#x3D;&quot;x-img-ovl x-wd-50&quot;&gt; &lt;!-- can add static size class x-hg-#r x-wd-#r --&gt;
    &lt;!-- img simple element --&gt;
    &lt;img src&#x3D;&quot;kss-assets/img/banner-vtex.jpg&quot; alt&gt;
    &lt;!-- over element --&gt;
