--- a/styleguide/item-containers.html
+++ b/styleguide/item-containers.html
@@ -90,7 +90,13 @@
                     <li class="kss-nav__item ">
                       <a href="section-containers.html#kssref-containers-6">
                         <span class="kss-nav__ref">3.6</span>
-                        <span class="kss-nav__name">Surf Container</span>
+                        <span class="kss-nav__name">Image Hexa</span>
+                      </a>
+                    </li>
+                    <li class="kss-nav__item ">
+                      <a href="section-containers.html#kssref-containers-7">
+                        <span class="kss-nav__ref">3.7</span>
+                        <span class="kss-nav__name">White Surf Container</span>
                       </a>
                     </li>
                 </ul>
@@ -129,7 +135,7 @@
             <header class="kss-section kss-section--depth-1" id="kssref-containers">
 
             <article class="kss-section__content">
-                <p class="kss-section__source">Source: <span>src/containers/containers.scss</span>, line <span>6</span></p>
+                <p class="kss-section__source">Source: <span>src/containers/containers.scss</span>, line <span>7</span></p>
 
               <a class="kss-section__permalink" href="#kssref-containers">
                 <h1 class="kss-section__item kss-section__item--depth-1">
