--- a/styleguide/item-paragraphs-2.html
+++ b/styleguide/item-paragraphs-2.html
@@ -88,19 +88,19 @@
           the "root" element comes first in this loop, and can be detected using
           the "#if @first" block as seen below.
         -->
-            <header class="kss-section kss-section--depth-2" id="kssref-containers-4">
+            <header class="kss-section kss-section--depth-2" id="kssref-paragraphs-2">
 
             <article class="kss-section__content">
-                <p class="kss-section__source">Source: <span>src/containers/image-overlay/_image-overlay.scss</span>, line <span>86</span></p>
+                <p class="kss-section__source">Source: <span>src/paragraphs/commons/commons.scss</span>, line <span>16</span></p>
 
-              <a class="kss-section__permalink" href="#kssref-containers-4">
+              <a class="kss-section__permalink" href="#kssref-paragraphs-2">
                 <h2 class="kss-section__item kss-section__item--depth-2">
-                  <span class="kss-section__ref">3.4</span>
-                  <span class="kss-section__name">Morph Card + Image Overlay</span>
+                  <span class="kss-section__ref">5.2</span>
+                  <span class="kss-section__name">Left Text</span>
                 </h2>
               </a>
 
-                <div class="kss-section__description"></div>
+                <div class="kss-section__description"><p>for Left text re-use class <code>.x-tx-lft</code></p>
 </div>
 
             </article>
@@ -109,56 +109,12 @@
                 <h1 class="kss-modifiers__heading">Example</h1>
 
 
-                <div class="kss-modifiers__example"><div class="x-grid-row x-tx-cnt">
-   <!-- GRID layout -->
-   <div class="x-grid-col-45 x-pd-small">
-     <!-- Morph Card  -->
-     <div class="x-card-morph">
-       <!-- Image Overlay  -->
-       <div class="x-img-ovl x-hg-8r">
-         <img src="kss-assets/img/banner-vtex.jpg" alt>
-         <div class="x-img-ovl-layer">
-           <div>
-             <h2 class="x-mg-small"> VTEX </h2>
-           </div>
-         </div>
-       </div>
-       <!-- -->
-       <div class="x-pd-card">
-         <p class="x-p-js-small"> Is a long established fact that a reader will be distracted by the
-             readable content of a page when looking at its layout. The point of using
-             Lorem Ipsum is that it... </p>
-         <button class="x-button"> Read </button>
-       </div>
-     </div>
-   </div></div>
+                <div class="kss-modifiers__example"><p class="x-tx-lft"> Text Align  Left </p></div>
 
               </article>
 
                 <article class="kss-section__markup">
-                  <pre><code class="language-markup">&lt;div class&#x3D;&quot;x-grid-row x-tx-cnt&quot;&gt;
-   &lt;!-- GRID layout --&gt;
-   &lt;div class&#x3D;&quot;x-grid-col-45 x-pd-small&quot;&gt;
-     &lt;!-- Morph Card  --&gt;
-     &lt;div class&#x3D;&quot;x-card-morph&quot;&gt;
-       &lt;!-- Image Overlay  --&gt;
-       &lt;div class&#x3D;&quot;x-img-ovl x-hg-8r&quot;&gt;
-         &lt;img src&#x3D;&quot;kss-assets/img/banner-vtex.jpg&quot; alt&gt;
-         &lt;div class&#x3D;&quot;x-img-ovl-layer&quot;&gt;
-           &lt;div&gt;
-             &lt;h2 class&#x3D;&quot;x-mg-small&quot;&gt; VTEX &lt;/h2&gt;
-           &lt;/div&gt;
-         &lt;/div&gt;
-       &lt;/div&gt;
-       &lt;!-- --&gt;
-       &lt;div class&#x3D;&quot;x-pd-card&quot;&gt;
-         &lt;p class&#x3D;&quot;x-p-js-small&quot;&gt; Is a long established fact that a reader will be distracted by the
-             readable content of a page when looking at its layout. The point of using
-             Lorem Ipsum is that it... &lt;/p&gt;
-         &lt;button class&#x3D;&quot;x-button&quot;&gt; Read &lt;/button&gt;
-       &lt;/div&gt;
-     &lt;/div&gt;
-   &lt;/div&gt;</code></pre>
+                  <pre><code class="language-markup">&lt;p class&#x3D;&quot;x-tx-lft&quot;&gt; Text Align  Left &lt;/p&gt;</code></pre>
                 </article>
 
             </header>
