--- a/styleguide/item-paragraphs.html
+++ b/styleguide/item-paragraphs.html
@@ -70,21 +70,21 @@
             </a>
                 <ul class="kss-nav__subnav">
                     <li class="kss-nav__item ">
-                      <a href="section-paragraphs.html#kssref-paragraphs-centraltext">
+                      <a href="section-paragraphs.html#kssref-paragraphs-1">
                         <span class="kss-nav__ref">5.1</span>
                         <span class="kss-nav__name">Central Text</span>
                       </a>
                     </li>
                     <li class="kss-nav__item ">
-                      <a href="section-paragraphs.html#kssref-paragraphs-headlines">
+                      <a href="section-paragraphs.html#kssref-paragraphs-2">
                         <span class="kss-nav__ref">5.2</span>
-                        <span class="kss-nav__name">Headline</span>
+                        <span class="kss-nav__name">Left Text</span>
                       </a>
                     </li>
                     <li class="kss-nav__item ">
-                      <a href="section-paragraphs.html#kssref-paragraphs-lefttext">
+                      <a href="section-paragraphs.html#kssref-paragraphs-headlines">
                         <span class="kss-nav__ref">5.3</span>
-                        <span class="kss-nav__name">Left Text</span>
+                        <span class="kss-nav__name">Headline</span>
                       </a>
                     </li>
                 </ul>
