--- a/styleguide/section-paragraphs.html
+++ b/styleguide/section-paragraphs.html
@@ -70,21 +70,21 @@
             </a>
                 <ul class="kss-nav__subnav">
                     <li class="kss-nav__item ">
-                      <a href="section-paragraphs.html#kssref-paragraphs-centraltext">
+                      <a href="section-paragraphs.html#kssref-paragraphs-1">
                         <span class="kss-nav__ref">5.1</span>
                         <span class="kss-nav__name">Central Text</span>
                       </a>
                     </li>
                     <li class="kss-nav__item ">
-                      <a href="section-paragraphs.html#kssref-paragraphs-headlines">
+                      <a href="section-paragraphs.html#kssref-paragraphs-2">
                         <span class="kss-nav__ref">5.2</span>
-                        <span class="kss-nav__name">Headline</span>
+                        <span class="kss-nav__name">Left Text</span>
                       </a>
                     </li>
                     <li class="kss-nav__item ">
-                      <a href="section-paragraphs.html#kssref-paragraphs-lefttext">
+                      <a href="section-paragraphs.html#kssref-paragraphs-headlines">
                         <span class="kss-nav__ref">5.3</span>
-                        <span class="kss-nav__name">Left Text</span>
+                        <span class="kss-nav__name">Headline</span>
                       </a>
                     </li>
                 </ul>
@@ -125,12 +125,12 @@
 
 
             </header>
-            <section class="kss-section kss-section--depth-2" id="kssref-paragraphs-centraltext">
+            <section class="kss-section kss-section--depth-2" id="kssref-paragraphs-1">
 
             <article class="kss-section__content">
                 <p class="kss-section__source">Source: <span>src/paragraphs/commons/commons.scss</span>, line <span>1</span></p>
 
-              <a class="kss-section__permalink" href="#kssref-paragraphs-centraltext">
+              <a class="kss-section__permalink" href="#kssref-paragraphs-1">
                 <h2 class="kss-section__item kss-section__item--depth-2">
                   <span class="kss-section__ref">5.1</span>
                   <span class="kss-section__name">Central Text</span>
@@ -155,6 +155,36 @@
                 </article>
 
             </section>
+            <section class="kss-section kss-section--depth-2" id="kssref-paragraphs-2">
+
+            <article class="kss-section__content">
+                <p class="kss-section__source">Source: <span>src/paragraphs/commons/commons.scss</span>, line <span>16</span></p>
+
+              <a class="kss-section__permalink" href="#kssref-paragraphs-2">
+                <h2 class="kss-section__item kss-section__item--depth-2">
+                  <span class="kss-section__ref">5.2</span>
+                  <span class="kss-section__name">Left Text</span>
+                </h2>
+              </a>
+
+                <div class="kss-section__description"><p>for Left text re-use class <code>.x-tx-lft</code></p>
+</div>
+
+            </article>
+
+              <article class="kss-section__modifiers">
+                <h1 class="kss-modifiers__heading">Example</h1>
+
+
+                <div class="kss-modifiers__example"><p class="x-tx-lft"> Text Align  Left </p></div>
+
+              </article>
+
+                <article class="kss-section__markup">
+                  <pre><code class="language-markup">&lt;p class&#x3D;&quot;x-tx-lft&quot;&gt; Text Align  Left &lt;/p&gt;</code></pre>
+                </article>
+
+            </section>
             <section class="kss-section kss-section--depth-2" id="kssref-paragraphs-headlines">
 
             <article class="kss-section__content">
@@ -162,7 +192,7 @@
 
               <a class="kss-section__permalink" href="#kssref-paragraphs-headlines">
                 <h2 class="kss-section__item kss-section__item--depth-2">
-                  <span class="kss-section__ref">5.2</span>
+                  <span class="kss-section__ref">5.3</span>
                   <span class="kss-section__name">Headline</span>
                 </h2>
               </a>
@@ -200,36 +230,6 @@
   &lt;h3 class&#x3D;&quot;x-h3 [modifier class]&quot;&gt; Title H3 &lt;/h3&gt;
    &lt;h4 class&#x3D;&quot;x-h4 [modifier class]&quot;&gt; Title H4 &lt;/h4&gt;
     &lt;h5 class&#x3D;&quot;x-h5 [modifier class]&quot;&gt; Title H5 &lt;/h5&gt;</code></pre>
-                </article>
-
-            </section>
-            <section class="kss-section kss-section--depth-2" id="kssref-paragraphs-lefttext">
-
-            <article class="kss-section__content">
-                <p class="kss-section__source">Source: <span>src/paragraphs/commons/commons.scss</span>, line <span>15</span></p>
-
-              <a class="kss-section__permalink" href="#kssref-paragraphs-lefttext">
-                <h2 class="kss-section__item kss-section__item--depth-2">
-                  <span class="kss-section__ref">5.3</span>
-                  <span class="kss-section__name">Left Text</span>
-                </h2>
-              </a>
-
-                <div class="kss-section__description"><p>for Left text re-use class <code>.x-tx-cnt</code></p>
-</div>
-
-            </article>
-
-              <article class="kss-section__modifiers">
-                <h1 class="kss-modifiers__heading">Example</h1>
-
-
-                <div class="kss-modifiers__example"><p class="x-tx-cnt"> Text Align center </p></div>
-
-              </article>
-
-                <article class="kss-section__markup">
-                  <pre><code class="language-markup">&lt;p class&#x3D;&quot;x-tx-cnt&quot;&gt; Text Align center &lt;/p&gt;</code></pre>
                 </article>
 
             </section>
