--- a/styleguide/section-brandlines.html
+++ b/styleguide/section-brandlines.html
@@ -57,6 +57,12 @@
                         <span class="kss-nav__name">Highlight Colors</span>
                       </a>
                     </li>
+                    <li class="kss-nav__item ">
+                      <a href="section-brandlines.html#kssref-brandlines-3">
+                        <span class="kss-nav__ref">1.3</span>
+                        <span class="kss-nav__name">Gradiant Primary</span>
+                      </a>
+                    </li>
                 </ul>
           </li>
           <li class="kss-nav__item">
@@ -105,7 +111,7 @@
             <header class="kss-section kss-section--depth-1" id="kssref-brandlines">
 
             <article class="kss-section__content">
-                <p class="kss-section__source">Source: <span>src/index.scss</span>, line <span>31</span></p>
+                <p class="kss-section__source">Source: <span>src/index.scss</span>, line <span>28</span></p>
 
               <a class="kss-section__permalink" href="#kssref-brandlines">
                 <h1 class="kss-section__item kss-section__item--depth-1">
@@ -172,84 +178,84 @@
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #1E1E1E; black
-
-                    </p>
-                    <code class="kss-parameters__name">$black</code>
-                  </li>
-                  <li class="kss-parameters__item">
-                    <p class="kss-parameters__description">
-                      #48484A;  alt primary
+                      #48484A;  Primary Alternate
 
                     </p>
                     <code class="kss-parameters__name">$alt-primary</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #006262;  alt secondary
+                      #006262;  Secondary Alternate
 
                     </p>
                     <code class="kss-parameters__name">$alt-secondary</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #FFF; white
+                      #FFF; Absolute White
 
                     </p>
                     <code class="kss-parameters__name">$white</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #1460aa; primary blue
+                      #1E1E1E; Absolute Black
+
+                    </p>
+                    <code class="kss-parameters__name">$black</code>
+                  </li>
+                  <li class="kss-parameters__item">
+                    <p class="kss-parameters__description">
+                      #1460aa; Highlight Blue
 
                     </p>
                     <code class="kss-parameters__name">$highlight-blue</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #f7f9fa; gray color
+                      #f7f9fa; Soft Gray
 
                     </p>
                     <code class="kss-parameters__name">$gray</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #e3e4e6; grey border
+                      #e3e4e6; Dark Gray
 
                     </p>
-                    <code class="kss-parameters__name">$grey-border</code>
+                    <code class="kss-parameters__name">$grey-dark</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #F71963; vtex
+                      #F71963; VTEX
 
                     </p>
                     <code class="kss-parameters__name">$vtex</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #134cd8;  vtex
+                      #134cd8;  VTEX Second
 
                     </p>
                     <code class="kss-parameters__name">$vtexSecond</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #dbe9fd; vtex hover
+                      #dbe9fd; VTEX Hover Second
 
                     </p>
                     <code class="kss-parameters__name">$vtexSecondHover</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #ff4c4c; alert
+                      #ff4c4c; VTEX Alert
 
                     </p>
                     <code class="kss-parameters__name">$vtexAlert</code>
                   </li>
                   <li class="kss-parameters__item">
                     <p class="kss-parameters__description">
-                      #97113d; magic
+                      #97113d; MagicStore
 
                     </p>
                     <code class="kss-parameters__name">$magic</code>
@@ -257,6 +263,38 @@
                 </ul>
             </article>
 
+
+            </section>
+            <section class="kss-section kss-section--depth-2" id="kssref-brandlines-3">
+
+            <article class="kss-section__content">
+                <p class="kss-section__source">Source: <span>src/themes/experimentality/theme.scss</span>, line <span>118</span></p>
+
+              <a class="kss-section__permalink" href="#kssref-brandlines-3">
+                <h2 class="kss-section__item kss-section__item--depth-2">
+                  <span class="kss-section__ref">1.3</span>
+                  <span class="kss-section__name">Gradiant Primary</span>
+                </h2>
+              </a>
+
+                <div class="kss-section__description"><p>background gradiant <code>x-gradiant-primary</code></p>
+</div>
+
+            </article>
+
+              <article class="kss-section__modifiers">
+                <h1 class="kss-modifiers__heading">Example</h1>
+
+
+                <div class="kss-modifiers__example"><div class="x-hg-5r x-gradiant-primary">
+ </div></div>
+
+              </article>
+
+                <article class="kss-section__markup">
+                  <pre><code class="language-markup">&lt;div class&#x3D;&quot;x-hg-5r x-gradiant-primary&quot;&gt;
+ &lt;/div&gt;</code></pre>
+                </article>
 
             </section>
     </section>
